WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254512
Fix typo in default database quota definition
https://bugs.webkit.org/show_bug.cgi?id=254512
Summary
Fix typo in default database quota definition
Przemyslaw Gorszkowski
Reported
2023-03-27 05:58:25 PDT
In current implementation there is lapse in default quota definition: static const unsigned long long defaultQuota = 5 * 1024 * 1204; // 5 MB
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2023-03-27 06:21:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12000
EWS
Comment 2
2023-04-02 05:48:49 PDT
Committed
262493@main
(9603260a265d): <
https://commits.webkit.org/262493@main
> Reviewed commits have been landed. Closing PR #12000 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-02 05:49:14 PDT
<
rdar://problem/107528332
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug