Cherry-pick 262493@main (9603260a265d). https://bugs.webkit.org/show_bug.cgi?id=254512

Fix typo in default database quota definition
    https://bugs.webkit.org/show_bug.cgi?id=254512

    Reviewed by Michael Catanzaro.

    The current definition of the default database quota is wrongly
    specified.

    The fix uses MB constexpr to make it more obvious.

    * Source/WebKit/UIProcess/API/glib/WebKitUIClient.cpp:

    Canonical link: https://commits.webkit.org/262493@main